# study_currency_quotes_1_1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  currency.txt  docker-compose.yaml  gitlint.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
dags/: __init__.py  spark_worker_quotes_ars_dag.py  spark_worker_quotes_aud_dag.py  spark_worker_quotes_btc_dag.py  spark_worker_quotes_btcbr_dag.py  spark_worker_quotes_cad_dag.py  spark_worker_quotes_chf_dag.py  spark_worker_quotes_cny_dag.py  spark_worker_quotes_eth_dag.py  spark_worker_quotes_eur_dag.py  spark_worker_quotes_gbp_dag.py  spark_worker_quotes_jpy_dag.py  spark_worker_quotes_usd_dag.py  spark_worker_quotes_xpr_dag.py  spark_worker_quotes_xrp_dag.py
dags/etl/: __init__.py  requirements.txt
dags/etl/dags/: spark_worker_quotes_ars_dag.py  spark_worker_quotes_cad_dag.py  spark_worker_quotes_cny_dag.py  spark_worker_quotes_eth_dag.py  spark_worker_quotes_gbp_dag.py  spark_worker_quotes_jpy_dag.py  spark_worker_quotes_usd_dag.py
dags/etl/src/infrastructure/data/: __init__.py
dags/etl/src/infrastructure/data/utils/: connect_database.py  get_token_api.py  save_data.py
dags/etl/src/worker/quotes_ars/: etl_quotes_ars_daily_event.py
dags/etl/src/worker/quotes_aud/: etl_quotes_aud_daily_event.py
dags/etl/src/worker/quotes_btc/: etl_quotes_btc_daily_event.py
dags/etl/src/worker/quotes_cad/: etl_quotes_cad_daily_event.py
dags/etl/src/worker/quotes_chf/: etl_quotes_chf_daily_event.py
dags/etl/src/worker/quotes_cny/: etl_quotes_cny_daily_event.py
dags/etl/src/worker/quotes_eth/: etl_quotes_eth_daily_event.py
dags/etl/src/worker/quotes_eur/: etl_quotes_eur_daily_event.py
dags/etl/src/worker/quotes_gbp/: etl_quotes_gbp_daily_event.py
dags/etl/src/worker/quotes_usd/: etl_quotes_usd_daily_event.py
dags/etl/src/worker/quotes_xrp/: etl_quotes_xrp_daily_event.py
src/infrastructure/data/: __init__.py
src/infrastructure/data/currency_quotes/quotes_ars_daily_event/query/: __init__.py  quotes_ars_daily_event_query_repository.py
src/infrastructure/data/currency_quotes/quotes_ars_daily_event/service/: quotes_ars_daily_event_service.py
src/infrastructure/data/currency_quotes/quotes_aud_daily_event/query/: quotes_aud_daily_event_query_repository.py
src/infrastructure/data/currency_quotes/quotes_aud_daily_event/service/: __init__.py
src/infrastructure/data/currency_quotes/quotes_aud_daily_event/validator/: quotes_aud_daily_event_validator_schema.py
src/infrastructure/data/currency_quotes/quotes_btc_daily_event/command/: __init__.py  quotes_btc_daily_event.py
src/infrastructure/data/currency_quotes/quotes_btc_daily_event/query/: __init__.py  quotes_btc_daily_event.py
src/infrastructure/data/currency_quotes/quotes_btc_daily_event/service/: __init__.py  quotes_btc_daily_event.py
src/infrastructure/data/databases_connection/postgresql/: .env.dev_1.1_study_currency_quotes  .env.prd_1.1_study_currency_quotes
src/infrastructure/data/market_data/: __init__.py
src/infrastructure/data/market_data/quotes_btc_daily_event/: __init__.py
src/infrastructure/data/market_data/quotes_cad_daily_event/: __init__.py
src/infrastructure/data/utils/: __init__.py  connect_api.py  connect_database.py  get_token_api.py  save_data.py  session_spark.py
src/worker/quotes_ars/: etl_quotes_ars_daily_event.py
src/worker/quotes_aud/: etl_quotes_aud_daily_event.py
src/worker/quotes_btc/: etl_quotes_btc_daily_event.py
src/worker/quotes_btcbr/: etl_quotes_btcbr_daily_event.py
src/worker/quotes_cad/: etl_quotes_cad_daily_event.py
src/worker/quotes_chf/: etl_quotes_chf_daily_event.py
src/worker/quotes_cny/: etl_quotes_cny_daily_event.py
src/worker/quotes_eth/: etl_quotes_eth_daily_event.py
src/worker/quotes_eur/: etl_quotes_eur_daily_event.py
src/worker/quotes_gbp/: etl_quotes_gbp_daily_event.py
src/worker/quotes_jpy/: etl_quotes_jpy_daily_event.py
src/worker/quotes_usd/: etl_quotes_usd_daily_event.py
src/worker/quotes_xpr/: etl_quotes_xpr_daily_event.py
src/worker/quotes_xrp/: etl_quotes_xrp_daily_event.py
(+112 files in other folders)
