[project]
name = "1-1-study-currency-quotes"
version = "0.1.0"
description = ""
authors = [
    {name = "joaobarreto27",email = "joao.vito1951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "isort (>=6.0.1,<7.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
]

[tool.poetry]
packages = [{include = "1"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort . && black ."
test = "poetry run pytest -v"
kill = "kill -9 $(lsof -t -i :8000)"
docs = "mkdocs serve"
docs-deploy = "mkdocs gh-deploy --clean"
commit = "pre-commit run --all-files"