[project]
name = "1-1-study-currency-quotes"
version = "0.1.0"
description = ""
authors = [
    {name = "joaobarreto27",email = "joao.vito1951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "isort (>=6.0.1,<7.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyspark (>=4.0.0,<5.0.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "requests (>=2.32.5,<3.0.0)",
    "types-requests (>=2.32.4.20250809,<3.0.0.0)",
]

[tool.poetry]
packages = [{include = "1"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort . && black ."
test = "poetry run pytest -v"
kill = "kill -9 $(lsof -t -i :8000)"
docs = "mkdocs serve"
docs-deploy = "mkdocs gh-deploy --clean"
commit = "poetry run pre-commit run --all-files"
check_ruff = "ruff check src/utils/connect_api.py --fix"
