[metadata]
name = study_currency_quotes_1_1
version = 2.0.0
author = João Vitor Barreto
author_email = seu.email@exemplo.com
description = Projeto de extração de moedas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src
include = infrastructure, models, workers, utils, schemas, validators, databases_connection
